examples/test/testpolicy2066.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2066
  namespace: namespace113
spec:
  podSelector:
    matchLabels:
      key32: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value33
          key35: value7
      podSelector:
        matchLabels:
          key42: value41
          key31: value48
          key11: value19
